# NewsletterGeneratorAiAgent

./: .gitignore  Debugging Render HITL.md  README.md  index.html  project_report.txt  render.yaml
NewsletterAiAgent/: .env.example  README.md  README_FRONTEND.md  app.js  hitl_status.json  index.html  netlify.toml  pyproject.toml  requirements.txt  styles.css  test_email.py
NewsletterAiAgent/api/: main.py
NewsletterAiAgent/docs/: CNAME  app.js
NewsletterAiAgent/frontend/: app.js  index.html  styles.css
NewsletterAiAgent/netlify/functions/: api.py
NewsletterAiAgent/scripts/: prepare_finetune_data.py
NewsletterAiAgent/src/newsletter/: __init__.py  config.py  email_client.py  hitl.py  image_gen.py  llm.py  research.py  run.py  writer.py
NewsletterAiAgent/src/newsletter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
NewsletterAiAgent/style_examples/: bartlett_hormozi.json
NewsletterAiAgent/style_guides/: bartlett_hormozi.md
NewsletterAiAgent/training/: README.md  raw_pairs.example.jsonl
NewsletterAiAgent/training/ollama/: Modelfile.example
docs/: app.js  index.html
